<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/menual1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Title"
        android:textSize="40dp"
        android:textColor="@color/fontColor"
        app:layout_constraintBottom_toTopOf="@+id/menual1PaperImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/menual1Greeting"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menual1_greeting"
        android:textSize="20dp"
        android:textColor="@color/fontColor"
        app:layout_constraintBottom_toTopOf="@+id/menual1PaperImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menual1Title" />

    <TextView
        android:id="@+id/menual1PaperRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/menual1_right"
        android:textColor="@color/manualFontColor"
        app:layout_constraintBottom_toTopOf="@+id/menual1PaperImg"
        app:layout_constraintEnd_toEndOf="@+id/menual1PaperImg" />

    <TextView
        android:id="@+id/menual1Paper_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/menual_left"
        android:textColor="@color/manualFontColor"
        app:layout_constraintBottom_toTopOf="@+id/menual1PaperImg"
        app:layout_constraintStart_toStartOf="@+id/menual1PaperImg" />

    <ImageView
        android:id="@+id/menual1PaperImg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/paper_image"
        app:layout_constraintBottom_toTopOf="@+id/menual1ButtonArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menual1PaperText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menual1_text1"
        android:textColor="@color/fontColor"
        app:layout_constraintBottom_toBottomOf="@+id/menual1PaperImg"
        app:layout_constraintEnd_toEndOf="@+id/menual1PaperImg"
        app:layout_constraintStart_toStartOf="@+id/menual1PaperImg"
        app:layout_constraintTop_toTopOf="@+id/menual1PaperImg"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/menual1PaperText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/menual1_text2"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="@+id/menual1PaperImg"
        app:layout_constraintStart_toStartOf="@+id/menual1PaperImg"
        app:layout_constraintTop_toBottomOf="@+id/menual1PaperText1"
        />

    <LinearLayout
        android:id="@+id/menual1ButtonArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menual1PaperImg"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_black" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>