<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/backbutton"
                    android:clickable="true"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:text="@string/TodayTitle"
                    android:textAlignment="center"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/confirmbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/confirmbtn"
                    android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/textbody"/>

                </ScrollView>
        </LinearLayout>
</LinearLayout>