<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/menual3Img1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/word_img"
        app:layout_constraintBottom_toTopOf="@+id/menual3Img2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/menual3Img2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/word_img"
        app:layout_constraintBottom_toTopOf="@+id/menual3Img3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/menual3Img3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/word_img"
        app:layout_constraintBottom_toTopOf="@+id/menual3PaperImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/menual3_right"
        android:textColor="@color/manualFontColor"
        app:layout_constraintBottom_toTopOf="@+id/menual3PaperImg"
        app:layout_constraintEnd_toEndOf="@+id/menual3PaperImg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/menual_left"
        android:textColor="@color/manualFontColor"
        app:layout_constraintBottom_toTopOf="@+id/menual3PaperImg"
        app:layout_constraintStart_toStartOf="@+id/menual3PaperImg" />

    <ImageView
        android:id="@+id/menual3PaperImg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/paper_image"
        app:layout_constraintBottom_toTopOf="@+id/menual3ButtonArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menual3PaperText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/menual3_text1"
        android:textColor="@color/fontColor"
        app:layout_constraintStart_toStartOf="@+id/menual3PaperImg"
        app:layout_constraintEnd_toEndOf="@+id/menual3PaperImg"
        app:layout_constraintBottom_toBottomOf="@+id/menual3PaperImg"
        app:layout_constraintTop_toTopOf="@+id/menual3PaperImg"
        app:layout_constraintVertical_bias="0.11"
        />

    <TextView
        android:id="@+id/menual3PaperText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/menual3_text2"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="@+id/menual3PaperImg"
        app:layout_constraintStart_toStartOf="@+id/menual3PaperImg"
        app:layout_constraintTop_toBottomOf="@+id/menual3PaperText1"
        />

    <TextView
        android:id="@+id/menual3PaperText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/menual3_text3"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="@+id/menual3PaperImg"
        app:layout_constraintStart_toStartOf="@+id/menual3PaperImg"
        app:layout_constraintTop_toBottomOf="@+id/menual3PaperText2"
        />

    <LinearLayout
        android:id="@+id/menual3ButtonArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menual1PaperImg"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_black" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circle_16px_gray" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>